typescript/checker/tests/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration3.ts.stderr
error: TS1038
 --> $DIR/tests/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration3.ts:2:3
  |
2 |   declare module M2 {
  |   ^^^^^^^

